# awssecretmanamerjson-to-linux-envs

./: .gitignore  .gitignore copy  Cargo.toml  Dockerfile  Makefile  README.md
ci/: container.sh
ci/container_main/: Dockerfile
src/: main.rs
